[project]
name = "comfyui-doubao-llm"
version = "1.0.0"
description = "ComfyUI nodes for Doubao (ByteDance) LLM and Vision Language Model integration"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["comfyui", "doubao", "llm", "ai", "bytedance"]

[project.urls]
Homepage = "https://github.com/your-username/comfyui-doubao-llm"
Repository = "https://github.com/your-username/comfyui-doubao-llm"
Issues = "https://github.com/your-username/comfyui-doubao-llm/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfyui-doubao-llm"]

[tool.setuptools.package-data]
"comfyui-doubao-llm" = ["*.py", "*.md", "*.txt", "examples/*.json"]